--- a/docs/docs/policies.mdx
+++ b/docs/docs/policies.mdx
@@ -994,7 +994,7 @@ default restart, label `2` a greeting and `3` indicates goodbye.
 
 A policy can be trained to learn two kinds of labels -
 
-1. The next most appropriate action to be triggered by the assistant. For example, [`TEDPolicy`](#tedpolicy) is trained to do this.
+1. The next most appropriate action to be triggered by the assistant. For example, [`TEDPolicy`](#ted-policy) is trained to do this.
 2. The next most likely intent that a user can express. For example, [`IntentTEDPolicy`](#intenttedpolicy) is trained to do this.
 
 Hence, a tracker can be featurized to learn one of the above kind of labels.
