--- a/changelog/8751.improvement.md
+++ b/changelog/8751.improvement.md
@@ -1,1 +1,1 @@
-Added new functionality in ``DIET`` class which enables us updating ``DenseForSparse`` layers' kernels if feature sizes are changed during incremental training.
+Added new functionality in `TransformerRasaModel` and `rasa_layers.py` classes which enables us updating `DenseForSparse` layers' kernels if feature sizes are changed during incremental training.
