--- a/docs/docs/default-actions.mdx
+++ b/docs/docs/default-actions.mdx
@@ -225,6 +225,14 @@ class ActionUnlikelyIntent:
 ```
 
 :::note
+Since `action_unlikely_intent` can be triggered at any conversation step during inference,
+all policies which are trained on only story data, for example - `TEDPolicy`, `IntentTEDPolicy`,
+`MemoizationPolicy` ignore its presence in the tracker when making a prediction. However, `RulePolicy`
+takes its presence into account so that [conversation behaviour is customizable](./default-actions.mdx#customization-1).
+
+:::
+
+:::note
 `action_unlikely_intent` cannot be included in the training stories. It can **only** be added to rules.
 
 :::
