fix missing links

--- a/docs/docs/default-actions.mdx
+++ b/docs/docs/default-actions.mdx
@@ -190,8 +190,8 @@ the Rasa SDK.
 
 ## action_unlikely_intent
 
-Rasa Open Source triggers `action_unlikely_intent` via [`IntentTEDPolicy`](./policies.mdx#intented-policy).
-You can control how often this action is predicted by tuning the [`tolerance`](./policies.mdx#intented-policy)
+Rasa Open Source triggers `action_unlikely_intent` via [`IntentTEDPolicy`](./policies.mdx#intentted-policy).
+You can control how often this action is predicted by tuning the [`tolerance`](./policies.mdx#intentted-policy)
 parameter of `IntentTEDPolicy`.
 
 ### Customization
