hopefully last time :pray:

--- a/changelog/8913.feature.md
+++ b/changelog/8913.feature.md
@@ -1,4 +1,4 @@
-Introduces a new policy called [`IntentTEDPolicy`](./policies.mdx#intent-ted-policy).
+Introduces a new policy called [`IntentTEDPolicy`](./policies.mdx#intentted-policy).
 
 `IntentTEDPolicy` helps you [review conversations](./conversation-driven-development.mdx#review)
  and also allows your bot to react to unexpected user turns in conversations.
