--- a/docs/docs/migration-guide.mdx
+++ b/docs/docs/migration-guide.mdx
@@ -10,6 +10,27 @@ description: |
 This page contains information about changes between major versions and
 how you can migrate from one version to another.
 
+## Rasa 2.7 to 2.8
+
+### Deprecations
+
+#### Tracker Featurizers
+
+`training_states_actions_and_entities` method of `TrackerFeaturizer`, `FullDialogueTrackerFeaturizer` and
+`MaxHistoryTrackerFeaturizer` classes is deprecated and will be removed in Rasa Open Source 3.0 .
+If you had a custom tracker featurizer which relied on this method from any of the above classes, please use
+`training_states_labels_and_entities` instead.
+
+`training_states_actions` method of `TrackerFeaturizer`, `FullDialogueTrackerFeaturizer` and
+`MaxHistoryTrackerFeaturizer` classes is deprecated and will be removed in Rasa Open Source 3.0 .
+If you had a custom tracker featurizer which relied on this method from any of the above classes, please use
+`training_states_labels` instead.
+
+#### State Featurizer
+
+`encode_all_actions` method of `SingleStateFeaturizer` class is deprecated and will be removed in Rasa Open Source 3.0 .
+It is recommended to use the method `encode_all_labels` instead.
+
 ## Rasa 2.5 to 2.6
 
 ### Forms
