rename IntentTED to UnexpecTEDIntentPolicy everywhere

--- a/changelog/8913.feature.md
+++ b/changelog/8913.feature.md
@@ -1,19 +1,19 @@
-Introduces a new policy called [`IntentTEDPolicy`](./policies.mdx#intentted-policy).
+Introduces a new policy called [`UnexpecTEDIntentPolicy`](./policies.mdx#unexpected-intent-policy).
 
-`IntentTEDPolicy` helps you [review conversations](./conversation-driven-development.mdx#review)
+`UnexpecTEDIntentPolicy` helps you [review conversations](./conversation-driven-development.mdx#review)
  and also allows your bot to react to unexpected user turns in conversations.
  It is an auxiliary policy that should only be used in conjunction with
  at least one other policy, as the only action that it can trigger
  is the special and newly introduced
  [`action_unlikely_intent`](./default-actions.mdx#action_unlikely_intent) action.
 
- The auto-configuration will include `IntentTEDPolicy` in your
+ The auto-configuration will include `UnexpecTEDIntentPolicy` in your
  configuration automatically, but you can also include it yourself
  in the `policies` section of the configuration:
 
  ```
  policies:
-   - name: IntentTEDPolicy
+   - name: UnexpecTEDIntentPolicy
      epochs: 200
      max_history: 5
  ```
@@ -21,12 +21,12 @@ Introduces a new policy called [`IntentTEDPolicy`](./policies.mdx#intentted-poli
 As part of the feature, it also introduces:
 
 - [`IntentMaxHistoryTrackerFeaturizer`](./policies.mdx#3-intent-max-history)
-  to featurize the trackers for `IntentTEDPolicy`.
-- `MultiLabelDotProductLoss` to support `IntentTEDPolicy`'s multi-label training objective.
+  to featurize the trackers for `UnexpecTEDIntentPolicy`.
+- `MultiLabelDotProductLoss` to support `UnexpecTEDIntentPolicy`'s multi-label training objective.
 - A new default action called [`action_unlikely_intent`](./default-actions.mdx#action_unlikely_intent).
 
 
-`rasa test` command has also been adapted to `IntentTEDPolicy`:
+`rasa test` command has also been adapted to `UnexpecTEDIntentPolicy`:
 
 - If a test story contains `action_unlikely_intent` and the policy ensemble does not trigger it, this leads to
   a test error (wrongly predicted action).
