--- a/docs/docs/policies.mdx
+++ b/docs/docs/policies.mdx
@@ -58,7 +58,7 @@ expected outcome in the case of a tie. They look like this, where higher numbers
 
 * 3 - `MemoizationPolicy` or `AugmentedMemoizationPolicy`
 
-* 2 - `IntentTEDPolicy`
+* 2 - `UnexpecTEDIntentPolicy`
 
 * 1 - `TEDPolicy`
 
@@ -400,7 +400,7 @@ for details.
 </details>
 
 
-### IntentTED Policy
+### UnexpecTED Intent Policy
 
 :::caution
 This feature is experimental.
@@ -410,23 +410,23 @@ If you have feedback (positive or negative) please share it with us on the [Rasa
 
 :::
 
-`IntentTEDPolicy` helps you review conversations and also allows your bot to react
+`UnexpecTEDIntentPolicy` helps you review conversations and also allows your bot to react
 to unlikely user turns. It is an auxiliary policy that should only be used in
 conjunction with at least one other policy, as the only action that it can trigger
 is the special [`action_unlikely_intent`](./default-actions.mdx#action_unlikely_intent) action.
 
-`IntentTEDPolicy` has the same model architecture as [`TEDPolicy`](./policies.mdx#ted-policy).
+`UnexpecTEDIntentPolicy` has the same model architecture as [`TEDPolicy`](./policies.mdx#ted-policy).
 The difference is at a task level. Instead of learning the best action to be triggered next,
-`IntentTEDPolicy` learns the set of intents that are most likely to be expressed by the user
+`UnexpecTEDIntentPolicy` learns the set of intents that are most likely to be expressed by the user
 given the conversation context from training stories. It uses the learned information at inference time by
 checking if the predicted intent by NLU is the most likely intent. If the intent predicted
-by NLU is indeed likely to occur given the conversation context, `IntentTEDPolicy` does not trigger
+by NLU is indeed likely to occur given the conversation context, `UnexpecTEDIntentPolicy` does not trigger
 any action. Otherwise, it triggers an [`action_unlikely_intent`](./default-actions.mdx#action_unlikely_intent)
  with a confidence of `1.00`.
 
-`IntentTEDPolicy` should be viewed as an aid for `TEDPolicy`. Since, `TEDPolicy` is expected to improve
+`UnexpecTEDIntentPolicy` should be viewed as an aid for `TEDPolicy`. Since, `TEDPolicy` is expected to improve
 with better coverage of unique conversation paths that the assistant is expected to handle in the training data,
-`IntentTEDPolicy` helps to surface these unique conversation paths from past conversations. For example, if you had
+`UnexpecTEDIntentPolicy` helps to surface these unique conversation paths from past conversations. For example, if you had
 the following story in your training data:
 
 ```yaml-rasa title="stories.yml"
@@ -463,34 +463,34 @@ stories:
 As soon as the `deny` intent gets triggered, the policy handling the form will keep requesting for the `cuisine` slot
 to be filled, as the training stories don't say that this case should be treated differently.
 To help you identify that a special story that handles the user's `deny` intent might be missing at this point,
- `IntentTEDPolicy` can trigger an `action_unlikely_intent` action right after `deny` intent.
+ `UnexpecTEDIntentPolicy` can trigger an `action_unlikely_intent` action right after `deny` intent.
  Subsequently, you can improve your assistant by adding a new training story that handles this particular case.
 
-To reduce false warnings, `IntentTEDPolicy` has two mechanisms in place at inference time:
+To reduce false warnings, `UnexpecTEDIntentPolicy` has two mechanisms in place at inference time:
 
-1. `IntentTEDPolicy`'s [priority](./policies.mdx#policy-priority) is intentionally kept lower than all
+1. `UnexpecTEDIntentPolicy`'s [priority](./policies.mdx#policy-priority) is intentionally kept lower than all
 [rule based policies](./policies.mdx#rule-based-policies) since rules may exist for situations that are novel for
-`TEDPolicy` or `IntentTEDPolicy`.
+`TEDPolicy` or `UnexpecTEDIntentPolicy`.
 
-2. `IntentTEDPolicy` does not predict an `action_unlikely_intent` if the last predicted intent
+2. `UnexpecTEDIntentPolicy` does not predict an `action_unlikely_intent` if the last predicted intent
 isn't present in any of the training stories, which might happen if an intent is only used in rules.
 
 #### Prediction of `action_unlikely_intent`
 
-`IntentTEDPolicy` is invoked immediately after a user utterance and can either
+`UnexpecTEDIntentPolicy` is invoked immediately after a user utterance and can either
 trigger `action_unlikely_intent` or abstain (in which case other policies will predict actions).
-To determine if `action_unlikely_intent` should be triggered, `IntentTEDPolicy` computes a score
+To determine if `action_unlikely_intent` should be triggered, `UnexpecTEDIntentPolicy` computes a score
  for the user's intent in the current dialogue context and checks if this score is below a
  certain threshold score.
 
 This threshold score is learned at training time but can be adjusted at inference time
 via the `tolerance` parameter.  The higher the `tolerance`, the lower the intent's
-score (the more unlikely the intent) needs to be before `IntentTEDPolicy` triggers
+score (the more unlikely the intent) needs to be before `UnexpecTEDIntentPolicy` triggers
 the `action_unlikely_intent` action.
 
 **Configuration:**
 
-You can pass configuration parameters to the `IntentTEDPolicy` using the `config.yml` file.
+You can pass configuration parameters to the `UnexpecTEDIntentPolicy` using the `config.yml` file.
 If you want to fine-tune model's performance, start by modifying the following parameters:
 
 * `epochs`:
@@ -503,7 +503,7 @@ If you want to fine-tune model's performance, start by modifying the following p
 
   ```yaml-rasa title="config.yml"
   policies:
-  - name: IntentTEDPolicy
+  - name: UnexpecTEDIntentPolicy
     epochs: 200
   ```
 
@@ -520,17 +520,17 @@ If you want to fine-tune model's performance, start by modifying the following p
   into account. Similarly, lowering the value of `max_history` can result in `action_unlikely_intent` being
   triggered less often but can also be a stronger indicator that the corresponding conversation path
   is highly unique and hence unexpected.
-  We recommend you to set the `max_history` of `IntentTEDPolicy` equal to that of `TEDPolicy`.
+  We recommend you to set the `max_history` of `UnexpecTEDIntentPolicy` equal to that of `TEDPolicy`.
   Here is how the config would look like:
 
   ```yaml-rasa title="config.yml"
   policies:
-  - name: IntentTEDPolicy
+  - name: UnexpecTEDIntentPolicy
     max_history: 8
   ```
 
 * `ignore_intents_list`:
-    This parameter lets you configure `IntentTEDPolicy` to not predict `action_unlikely_intent` for
+    This parameter lets you configure `UnexpecTEDIntentPolicy` to not predict `action_unlikely_intent` for
     a subset of intents. You might want to do this if you come across a certain list of intents for which there
     are too many false warnings generated.
 
@@ -538,11 +538,11 @@ If you want to fine-tune model's performance, start by modifying the following p
     The `tolerance` parameter is a number that ranges from `0.0` to `1.0` (inclusive).
     It helps to adjust the threshold score used during prediction of `action_unlikely_intent`
     at inference time. Here, `0.0` means that the score threshold is the one
-    that `IntentTEDPolicy` had determined at training time.
-    A tolerance of `1.0` means that the threshold score is so low that `IntentTEDPolicy` would not
+    that `UnexpecTEDIntentPolicy` had determined at training time.
+    A tolerance of `1.0` means that the threshold score is so low that `UnexpecTEDIntentPolicy` would not
     trigger `action_unlikely_intent` for any of the "negative examples" that it has encountered
     during training. These negative examples are combinations of dialogue contexts and user
-    intents that are _incorrect_. `IntentTEDPolicy` generates these negative examples from your
+    intents that are _incorrect_. `UnexpecTEDIntentPolicy` generates these negative examples from your
     training data by picking a random story part and pairing it with a random intent that doesn't
      occur at this point.
 
@@ -664,7 +664,7 @@ However, additional parameters exist that you could adapt.
 |                                       |                        | coming from the listed names are used. If list is empty      |
 |                                       |                        | all available features are used.                             |
 +---------------------------------------+------------------------+--------------------------------------------------------------+
-| ignore_intents_list                   | []                     | This parameter lets you configure `IntentTEDPolicy` to ignore|
+| ignore_intents_list                   | []                     | This parameter lets you configure `UnexpecTEDIntentPolicy` to ignore|
 |                                       |                        | the prediction of `action_unlikely_intent` for a subset of   |
 |                                       |                        | intents. You might want to do this if you come across a      |
 |                                       |                        | certain list of intents for which there are too many false   |
@@ -674,13 +674,13 @@ However, additional parameters exist that you could adapt.
 |                                       |                        | to `1.0` (inclusive). It helps to adjust the threshold score |
 |                                       |                        | used during prediction of `action_unlikely_intent` at        |
 |                                       |                        | inference time. Here, `0.0` means that the score threshold   |
-|                                       |                        | is the one that `IntentTEDPolicy` had determined at training |
+|                                       |                        | is the one that `UnexpecTEDIntentPolicy` had determined at training |
 |                                       |                        | time. A tolerance of `1.0` means that the threshold score    |
 |                                       |                        | is so low that `IntentTED` would not trigger                 |
 |                                       |                        | `action_unlikely_intent` for any of the "negative examples"  |
 |                                       |                        | that it has encountered during training. These negative      |
 |                                       |                        | examples are combinations of dialogue contexts and user      |
-|                                       |                        | intents that are _incorrect_. `IntentTEDPolicy` generates    |
+|                                       |                        | intents that are _incorrect_. `UnexpecTEDIntentPolicy` generates    |
 |                                       |                        | these negative examples from your training data by picking a |
 |                                       |                        | random story part and pairing it with a random intent that   |
 |                                       |                        | doesn't occur at this point.                                 |
@@ -692,7 +692,7 @@ However, additional parameters exist that you could adapt.
 #### Tuning the tolerance parameter
 
 When [reviewing real conversations](./conversation-driven-development.mdx#review), we encourage you
-to tune the `tolerance` parameter in `IntentTEDPolicy`'s configuration to reduce the number
+to tune the `tolerance` parameter in `UnexpecTEDIntentPolicy`'s configuration to reduce the number
 of false warnings (intents that actually are likely given the conversation context).
 As you increase the value of `tolerance` from `0` to `1` in steps of `0.05`,
 the number of false warnings should decrease. However, increasing the `tolerance` will
@@ -701,7 +701,7 @@ paths not present in training stories will be missing in the set of flagged conv
 If you change the `max_history` value and retrain a model, you might have to re-adjust the `tolerance` value as well.
 
 :::note
-`IntentTEDPolicy` is only trained on [stories](./stories.mdx) and not [rules](./rules.mdx) from the training data.
+`UnexpecTEDIntentPolicy` is only trained on [stories](./stories.mdx) and not [rules](./rules.mdx) from the training data.
 
 :::
 
@@ -1001,7 +1001,7 @@ default restart, label `2` a greeting and `3` indicates goodbye.
 A policy can be trained to learn two kinds of labels -
 
 1. The next most appropriate action to be triggered by the assistant. For example, [`TEDPolicy`](#ted-policy) is trained to do this.
-2. The next most likely intent that a user can express. For example, [`IntentTEDPolicy`](#intentted-policy) is trained to do this.
+2. The next most likely intent that a user can express. For example, [`UnexpecTEDIntentPolicy`](#unexpected-intent-policy) is trained to learn this.
 
 Hence, a tracker can be featurized to learn one of the above kind of labels.
 Depending on the policy, the target labels correspond to bot actions or bot utterances
@@ -1037,7 +1037,7 @@ should be reshaped to `(num_unique_turns, max_history * num_input_features)`.
 ##### 3. Intent Max History
 
 `IntentMaxHistoryTrackerFeaturizer` inherits from `MaxHistoryTrackerFeaturizer`. Since, it is used by
-[`IntentTEDPolicy`](#intentted-policy), the target labels that it creates are the intents that can be
+[`UnexpecTEDIntentPolicy`](#unexpected-intent-policy), the target labels that it creates are the intents that can be
 expressed by a user in the context of a conversation tracker. Unlike
 other tracker featurizers, there can be multiple target labels. Hence, it pads the
 list of target labels with a constant value (`-1`) on the right to return an equally sized list of target labels
