--- a/docs/docs/migration-guide.mdx
+++ b/docs/docs/migration-guide.mdx
@@ -10,6 +10,39 @@ description: |
 This page contains information about changes between major versions and
 how you can migrate from one version to another.
 
+## Rasa 2.7 to 2.8
+
+:::caution
+This is a release **breaking backwards compatibility of machine learning models**.
+I don't think we need this, but will still leave here to discuss.
+:::
+
+### Incremental Training
+
+From now on new sparse features will be added dynamically during incremental training.
+In other words, we won't create an extra buffer in advance for additional vocabulary items,
+but will dynamically allocate space for them when we actually need it.
+This means there's no need to specify `additional_vocabulary_size` for `CountVectorsFeaturizer` or
+`number_additional_patterns` for `RegexFeaturizer`.
+
+**Before**
+```yaml
+pipeline:
+  - name: "WhitespaceTokenizer"
+  - name: "RegexFeaturizer"
+    number_additional_patterns: 100
+  - name: "CountVectorsFeaturizer"
+    additional_vocabulary_size: {text: 100, response: 20}
+```
+**Now**
+```yaml
+pipeline:
+  - name: "WhitespaceTokenizer"
+  - name: "RegexFeaturizer"
+  - name: "CountVectorsFeaturizer"
+```
+
+
 ## Rasa 2.5 to 2.6
 
 ### Forms
