--- a/changelog/8232.improvement.md
+++ b/changelog/8232.improvement.md
@@ -1,9 +1,14 @@
-New sparse features are added dynamically during incremental training.
+Users don't need to specify an additional buffer size for sparse featurizers anymore during incremental training.
 
-In other words, we won't create an extra buffer in advance for additional vocabulary items,
-but will dynamically allocate space for them when we actually need it.
-This means there's no need to specify `additional_vocabulary_size` for `CountVectorsFeaturizer` or
-`number_additional_patterns` for `RegexFeaturizer`.
+Space for new sparse features are created dynamically inside the downstream machine learning 
+models - `DIETClassifier`, `ResponseSelector`. In other words, no extra buffer is created in 
+advance for additional vocabulary items and space will be dynamically allocated for them inside the model.
+
+This means there's no need to specify `additional_vocabulary_size` for [`CountVectorsFeaturizer`](./components.mdx#countvectorsfeaturizer) or
+`number_additional_patterns` for [`RegexFeaturizer`](./components.mdx#regexfeaturizer). These parameters are now deprecated.
+
+Also, all custom layers specifically built for machine learning models - `RasaSequenceLayer`, `RasaFeatureCombiningLayer` 
+and `ConcatenateSparseDenseFeatures` now inherit from `RasaCustomLayer` so that they support flexible incremental training out of the box.
 
 **Before**
 ```yaml
@@ -14,6 +19,7 @@ pipeline:
   - name: "CountVectorsFeaturizer"
     additional_vocabulary_size: {text: 100, response: 20}
 ```
+
 **Now**
 ```yaml
 pipeline:
