Fix typo in whitespacetokenizer link

--- a/docs/docs/components.mdx
+++ b/docs/docs/components.mdx
@@ -434,7 +434,7 @@ now implements its behavior.
 
 :::caution Deprecated
 The `ConveRTTokenizer` is deprecated and will be removed in a future release. The [ConveRTFeaturizer](./components.mdx#convertfeaturizer)
-should now be used with any other [tokenizer](./components.mdx#tokenizers), for example [WhitespaceTokenizer](.components.mdx#whitespacetokenizer).
+should now be used with any other [tokenizer](./components.mdx#tokenizers), for example [WhitespaceTokenizer](./components.mdx#whitespacetokenizer).
 :::
 
   * **Short**
@@ -493,7 +493,7 @@ should now be used with any other [tokenizer](./components.mdx#tokenizers), for 
 
 :::caution Deprecated
 The `LanguageModelTokenizer` is deprecated and will be removed in a future release. The [LanguageModelFeaturizer](./components.mdx#languagemodelfeaturizer)
-should now be used with any other [tokenizer](./components.mdx#tokenizers), for example [WhitespaceTokenizer](.components.mdx#whitespacetokenizer).
+should now be used with any other [tokenizer](./components.mdx#tokenizers), for example [WhitespaceTokenizer](./components.mdx#whitespacetokenizer).
 :::
 
 * **Short**
