Remove outdated link, clarify default value of cache_dir

--- a/docs/docs/components.mdx
+++ b/docs/docs/components.mdx
@@ -217,8 +217,9 @@ now implements its behavior.
       # If the requested model is not found in the
       # directory, it will be downloaded and
       # cached in this directory for future use.
-      # The default cache_dir is the same as
-      # https://huggingface.co/transformers/serialization.html#cache-directory
+      # The default value of `cache_dir` is the
+      # constant `TRANSFORMERS_CACHE`, defined in
+      # transformers.
       cache_dir: null
   ```
 
@@ -802,8 +803,9 @@ Note: The `feature-dimension` for sequence and sentence features does not have t
       # If the requested model is not found in the
       # directory, it will be downloaded and
       # cached in this directory for future use.
-      # The default cache_dir is the same as
-      # https://huggingface.co/transformers/serialization.html#cache-directory
+      # The default value of `cache_dir` is the
+      # constant `TRANSFORMERS_CACHE`, defined in
+      # transformers.
       cache_dir: null
   ```
 
