--- a/changelog/8913.feature.md
+++ b/changelog/8913.feature.md
@@ -29,7 +29,7 @@ As part of the feature, it also introduces:
 `rasa test` command has also been adapted to `UnexpecTEDIntentPolicy`:
 
 - If a test story contains `action_unlikely_intent` and the policy ensemble does not trigger it, this leads to
-  a test error (wrongly predicted action).
+  a test error (wrongly predicted action) and the corresponding story will be logged in `failed_test_stories.yml`.
 - If the story does not contain `action_unlikely_intent` and Rasa Open Source does predict it then
   the prediction of `action_unlikely_intent` will be ignored for the evaluation (and hence not lead
   to a prediction error) but the story will be logged in a file called `stories_with_warnings.yml`.
