Clarified what transformers is referring to

--- a/docs/docs/components.mdx
+++ b/docs/docs/components.mdx
@@ -805,7 +805,7 @@ Note: The `feature-dimension` for sequence and sentence features does not have t
       # cached in this directory for future use.
       # The default value of `cache_dir` is the
       # constant `TRANSFORMERS_CACHE`, defined in
-      # transformers.
+      # the Transformers library.
       cache_dir: null
   ```
 
