Clarified what transformers refer to

--- a/docs/docs/components.mdx
+++ b/docs/docs/components.mdx
@@ -219,7 +219,7 @@ now implements its behavior.
       # cached in this directory for future use.
       # The default value of `cache_dir` is the
       # constant `TRANSFORMERS_CACHE`, defined in
-      # transformers.
+      # Transformers library.
       cache_dir: null
   ```
 
