--- a/docs/docs/components.mdx
+++ b/docs/docs/components.mdx
@@ -1445,9 +1445,7 @@ Intent classifiers assign one of the intents defined in the domain file to incom
   * `model_confidence`:
     This parameter allows the user to configure how confidences are computed during inference. It can take two values:
     * `softmax`: Confidences are in the range `[0, 1]` (old behavior and current default). Computed similarities are normalized with the `softmax` activation function.
-    * `linear_norm`: Confidences are in the range `[0, 1]`. Computed dot product similarities are normalized with a linear function.
-
-    Please try using `linear_norm` as the value for `model_confidence`. This should make it easier to tune fallback thresholds for the [FallbackClassifier](./components.mdx#fallbackclassifier).
+    * `linear_norm` (deprecated): Confidences are in the range `[0, 1]`. Computed dot product similarities are normalized with a linear function.
 
 
 The above configuration parameters are the ones you should configure to fit your model to your data.
@@ -2717,9 +2715,7 @@ Selectors predict a bot response from a set of candidate responses.
   * `model_confidence`:
     This parameter allows the user to configure how confidences are computed during inference. It can take two values:
     * `softmax`: Confidences are in the range `[0, 1]` (old behavior and current default). Computed similarities are normalized with the `softmax` activation function.
-    * `linear_norm`: Confidences are in the range `[0, 1]`. Computed dot product similarities are normalized with a linear function.
-
-    Please try using `linear_norm` as the value for `model_confidence`. This should make it easier to tune fallback thresholds for the [FallbackClassifier](./components.mdx#fallbackclassifier).
+    * `linear_norm` (deprecated): Confidences are in the range `[0, 1]`. Computed dot product similarities are normalized with a linear function.
 
   The component can also be configured to train a response selector for a particular retrieval intent.
   The parameter `retrieval_intent` sets the name of the retrieval intent for which this response selector model is trained.
