--- a/changelog/9045.removal.md
+++ b/changelog/9045.removal.md
@@ -1,4 +1,4 @@
-Setting `model_confidence=linear_norm` is deprecated and will be removed in Rasa Open Source `3.0.0`.
+The option `model_confidence=linear_norm` is deprecated and will be removed in Rasa Open Source `3.0.0`.
 
 Rasa Open Source `2.3.0` introduced `linear_norm` as a possible value for `model_confidence`
 parameter in machine learning components such as `DIETClassifier`, `ResponseSelector` and `TEDPolicy`.
@@ -7,4 +7,3 @@ Therefore, `model_confidence=linear_norm` is now deprecated and
 will be removed in Rasa Open Source `3.0.0`. If you were using `model_confidence=linear_norm` for any of the mentioned components,
 we recommend to revert it back to `model_confidence=softmax` and re-train the assistant. After re-training,
 we also recommend to [re-tune the thresholds for fallback components](./fallback-handoff.mdx#fallbacks).
-
