--- a/docs/docs/migration-guide.mdx
+++ b/docs/docs/migration-guide.mdx
@@ -45,7 +45,7 @@ pipeline:
 
 ### Machine Learning Components
 
-Setting `model_confidence=linear_norm` is deprecated and will be removed in Rasa Open Source `3.0.0`.
+The option `model_confidence=linear_norm` is deprecated and will be removed in Rasa Open Source `3.0.0`.
 
 Rasa Open Source `2.3.0` introduced `linear_norm` as a possible value for `model_confidence`
 parameter in machine learning components such as `DIETClassifier`, `ResponseSelector` and `TEDPolicy`.
